Fix Comment Box Cut Off in Firefox
This commit normalizes the text size of inputs to 16px (to avoid
zooming in iOS) and changes the height of textbox inputs to be set in
ems to avoid a Firefox bug where the text was being cut off.

fixes #243

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -21,6 +21,10 @@ html, input, textarea, keygen, select, button {
                /* 3 */ "Helvetica Neue", sans-serif;
 }
 
+input, textarea, select, button {
+  font-size: 16px;
+}
+
 .page {
   padding: 0 0.5em;
   position: relative;
@@ -3234,7 +3238,9 @@ iframe {
 
 textarea {
   width: 100%;
+  min-height: 2.15em;
   box-sizing: border-box;
+  resize: vertical;
 }
 
 .image-content .description .buttons {
@@ -3412,8 +3418,8 @@ textarea {
 .image-content .inline-details .post-comment-inline textarea {
   color: #999;
   border-radius: 5px;
-  padding: 7px;
-  height: 30px;
+  padding: .5em;
+  height: 2.15em;
   border: 1px solid #d6d6d6;
 }
 
